force-app/main/default/objects/Kicker_Incentive_Configuration__c/Kicker_Incentive_Configuration__c.object-meta.xml
<CustomObject>
    <label>Kicker Incentive Configuration</label>
    <nameField>
        <label>Kicker Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kicker Incentive Configuration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>