force-app/main/default/objects/Kicker_Incentive_Configuration__c/fields/Kicker_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive__c</fullName>
    <label>Kicker Incentive</label>
    <referenceTo>Kicker_Incentive__c</referenceTo>
    <relationshipLabel>Kicker Incentive Configuration</relationshipLabel>
    <relationshipName>Kicker_Incentive_Configuration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>