force-app/main/default/objects/Kicker_Incentive_Configuration__c/fields/Kicker_Incentive_Config_Unique_No__c.field-meta.xml
<CustomField>
    <fullName>Kicker_Incentive_Config_Unique_No__c</fullName>
    <displayFormat>KIC-{000000}</displayFormat>
    <label>Kicker Incentive Config Unique No.</label>
    <type>AutoNumber</type>
</CustomField>